--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,10 @@
 web:
-build: .
-ports:
-  - "5337:80"
-links:
-  - redis
+  build: .
+  ports:
+   - "5000:5000"
+  volumes:
+   - .:/code
+  links:
+   - redis
 redis:
   image: redis
